web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__date__date-functions__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.postgres\n\nfrom invoices\nselect (invoice_date | date.to_text \"%d/%m/%Y\")\n\n"
---
SELECT
  TO_CHAR(invoice_date, 'DD/MM/YYYY')
FROM
  invoices
