web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__date__date-functions__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.mysql\n\nfrom invoices\nselect (invoice_date | date.to_text \"%d/%m/%Y\")\n\n"
---
SELECT
  DATE_FORMAT(invoice_date, '%d/%m/%Y')
FROM
  invoices
